--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.shell linguist-detectable=false
 demo/** linguist-documentation=false
 demo/** linguist-vendored=false
+* linguist-vendored
+*.sql linguist-vendored=false
