--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-demo/** linguist-documentation=false
-demo/** linguist-vendored=false
+MySQL/** linguist-documentation=false
+MySQL/** linguist-vendored=false
